--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -19,9 +19,11 @@
         width: 100%;
         max-width: 150px;
         margin: 0 10px;
+        font-weight: 300;
         .active {
           background-color: var(--watermelon);
           color: #ffffff;
+          font-weight: 600;
         }
         @media screen and (max-width: 1280px) {
           @media screen and (max-width: 992px) {
